# scrapy-playwright-scrapegraphai

./: .dockerignore  .gitignore  README.md  develop.ipynb  env.example  pyproject.toml
config/: crawler_config.yaml
infrastructure/docker/: Dockerfile  docker-compose.yml
src/: run_spider.py
src/crawler/: database.py  items.py  pipelines.py  settings.py
src/crawler/crud/: basic_crud.py  config_url_log_crud.py  frontier_crud.py
src/crawler/models/: __init__.py  config_url_log_model.py  frontier_model.py
src/crawler/spiders/: frontier_spider.py
src/crawler/sql/: queries.sql  schema.sql
src/crawler/utils/: config_utils.py  crawl_manager_utils.py  logging.py  logging_utils.py  playwright_utils.py  query_loader.py  url_utils.py
src/tools/: clean_db.py
