[project]
name = "scrapy-playwright-scrapegraphai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosql>=13.0",
    "asyncpg>=0.30.0",
    "logfire>=2.1.2",
    "polars>=1.12.0",
    "python-dotenv>=1.0.1",
    "scrapy-playwright>=0.0.42",
    "scrapy>=2.11.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
